Fixed z-index issue in style.css and added fixed image of tablet view.

--- a/style.css
+++ b/style.css
@@ -127,6 +127,9 @@ p { line-height: 2rem; }
   position: relative;
   z-index: 2;
 }
+.box {
+  z-index: 2;
+}
 
 
 /* ----------Footer---------- */
